[package]
name = "hangoutinator"
version = "0.1.0"
authors = ["calebsg225 calebsg2253284@gmail.com"]
edition = "2024"

[dependencies]
dotenv = "0.15"
rand = "0.9.2"
chrono = "0.4.42"
scraper = "0.24.0"
reqwest = {version = "0.12.23", features = ["blocking"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.0"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"bigdecimal",
]
